--- a/main.bib
+++ b/main.bib
@@ -50,6 +50,17 @@ MRREVIEWER = {E. Dyer},
 MRREVIEWER = {Stewart B. Priddy},
 }
 
+@article{AdamsPrimitiveElts,
+  title={Primitive elements in the K-theory of BSU},
+  author={Adams, J Frank},
+  journal={The Quarterly Journal of Mathematics},
+  volume={27},
+  number={2},
+  pages={253--262},
+  year={1976},
+  publisher={Oxford University Press}
+}
+
 @article{AdamsVFoS,
   title={Vector fields on spheres},
   author={Adams, J Frank},
@@ -399,6 +410,15 @@ MRREVIEWER = {Mark Hovey},
 MRREVIEWER = {Paul G. Goerss},
        DOI = {10.1016/j.aim.2012.02.023},
        URL = {http://dx.doi.org/10.1016/j.aim.2012.02.023},
+}
+
+@article{BehrensLaures,
+  title={{$\beta$}--family congruences and the {$f$}--invariant},
+  author={Behrens, Mark and Laures, Gerd},
+  journal={Geometry \& Topology Monographs},
+  volume={16},
+  pages={9--29},
+  year={2009}
 }
 
 @book {BeilinsonDrinfeld,
@@ -973,6 +993,17 @@ MRREVIEWER = {Haynes R. Miller},
        URL = {http://projecteuclid.org/euclid.hha/1201127511},
 }
 
+@article{HopkinsHovey,
+  title={Spin cobordism determines real K-theory},
+  author={Hopkins, Michael J and Hovey, Mark A},
+  journal={Mathematische Zeitschrift},
+  volume={210},
+  number={1},
+  pages={181--196},
+  year={1992},
+  publisher={Springer}
+}
+
 @article {HopkinsHunton,
     AUTHOR = {Hopkins, M. J. and Hunton, J. R.},
      TITLE = {On the structure of spaces representing a {L}andweber exact
@@ -1340,6 +1371,28 @@ MRREVIEWER = {A. Liulevicius},
   pages={317--317},
   year={1995},
   publisher={American Mathematical Society}
+}
+
+@article{LauresK1LocalTmf,
+  title={K (1)-local topological modular forms},
+  author={Laures, Gerd},
+  journal={Inventiones mathematicae},
+  volume={157},
+  number={2},
+  pages={371--403},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{LauresSplitting,
+  title={An E∞ splitting of spin bordism},
+  author={Laures, Gerd},
+  journal={American Journal of Mathematics},
+  volume={125},
+  number={5},
+  pages={977--1027},
+  year={2003},
+  publisher={The Johns Hopkins University Press}
 }
 
 @incollection {LawsonAbVars,
