remove todos from Apdx A

--- a/powerops.tex
+++ b/powerops.tex
@@ -366,7 +366,7 @@ Amazingly, this is exactly the behavior of the power operation for $E$--theory w
 and this becomes an $E^0$--algebra map (i.e., a map over $(\moduli{fg})^\wedge_\Gamma$) when the bottom map is factored as \[\CP^\infty_E \times \Sub_{p^k} \CP^\infty_E \xrightarrow{P^{\Sigma_{p^k}}} \psi_{\Sigma_{p^k}}^* \CP^\infty_E \to \CP^\infty_E.\]  This map has exactly the prescribed kernel, and by its very nature as a \emph{power operation} it reduces to the Frobenius on the special fiber.  Finally, this identification is definitionally compatible with the map sending a power operation to its constituent sum of unstable operations, i.e., the map from the natural $E_\infty$ context to the unstable context.
 
 \begin{remark}[{\cite[1.4.2.3]{CCO}}]
-There is a useful result about isogenies that more topologists out to be aware of, although it doesn't tie in directly to any of our exposition here.  Nonetheless, we record its statement: let $R$ be a (nice) complete local ring, and let $\G$ and $\G'$ be two $p$--divisible groups over $R$.  There is an injection \[\Isog_R(\G, \G') \into \Isog_{R/\m}(\G, \G').\]
+There is a useful result about isogenies that more topologists out to be aware of, although it doesn't tie in directly to any of our exposition here.  Nonetheless, we record its statement: for $R$ a sufficiently nice complete local ring, and for $\G$ and $\G'$ two $p$--divisible groups over $R$, reduction to the special fiber gives an injection \[\Isog(\G, \G') \into \Isog(\G \times \Spec R/\m, \G' \times \Spec R/\m).\]
 \end{remark}
 
 
@@ -426,8 +426,8 @@ A line bundle $\L$ on $\G$ together with a level structure $\ell\co A \to \G$ in
 In particular, functions $\phi\co \G \to \A^1$ can be thought of as sections of the trivial line bundle $\sheaf O_{\G}$, and coordinates can be thought of as trivializations of the same trivial line bundle.  We also remarked in \Cref{NormForFns} that the property of being a coordinate is stable under the operations on both sides of the norm-coherence equation.\footnote{This is reflected in topology as the assertion that the two power operations give two Thom classes for the regular representation, which must therefore differ by a unit.}
 \end{example}
 
-\begin{theorem}\label{AndosAlgebraicTheorem}
-\citeme{Ando's thesis and also Peterson-Stapleton}
+\begin{theorem}[{\cite[Theorem 2.5.7]{Ando}}]\label{AndosAlgebraicTheorem}
+\citeme{Peterson-Stapleton}
 Let $\L$ be a line bundle on a Lubin--Tate formal group $\G$, and let $s_0$ be a section of $\L_0$, the restriction of $\L$ to the formal group at the special fiber.  Then there exists exactly one norm-coherent section $s$ of $\L$ itself which restricts to $s_0$.
 \end{theorem}
 \begin{proof}[Proof sketch]
@@ -473,10 +473,9 @@ Let $C_0$ be an elliptic curve over a perfect field of positive characteristic. 
 We can apply these observations to $E_{\widehat C}$, the Morava $E$--theory for the formal group $\widehat C$, considered as an elliptic spectrum.  The natural orientation $MU[6, \infty) \to E_{\widehat C}$ from \Cref{EllipticSpectraAreOriented} is determined by the natural cubical structure on $\sheaf I(0)$, which by \Cref{Theta3IsTrivial} is \emph{uniquely} specified by the elliptic curve.  Our main new observation, then, is that the $N_\ell$ and $\psi_\ell^*$ constructions both convert this to a cubical structure on $C / \ell$, and hence are forced to agree by unicity.  In turn, it follows that the $\sigma$--orientation is a map of $H_\infty$ rings.
 \end{example}
 
-
-
-\todo{Power operations in Tate $K$--theory vs this story?}
-
+\begin{remark}
+In the next Lecture, we will show that Tate $K$--theory (cf.\ \Cref{TateKTheoryDefn}) not only arises as an elliptic spectrum, but that this endows it with a natural $E_\infty$ structure.  From the perspective of this section, the induced $H_\infty$ structure is controlled by quotients by finite subgroups of the Tate curve, which has been studied from various perspectives by Huan~\cite{Huan} and by Ganter~\cite{GanterStringyOpns,GanterPowerOpnsInTateKthy}.  This distinguishes it from the $E_\infty$ ring spectrum $KU^{\CP^\infty_+}$, which otherwise has the same underlying ring spectrum in the homotopy category.  This distinction also arises in classical homotopy theory: the total exterior power operation can be shown to give an $E_\infty$ map to $K^{\Tate}$ with its $E_\infty$ ring structure but \emph{not} to $KU^{\CP^\infty_+}$.
+\end{remark}
 
 
 
@@ -1120,9 +1119,7 @@ The case of the orientation $M\String \to \tmf$ has all of the same trappings, b
     \item Analyze the homotopy type of $\widehat L_1 \tmf$ and compare it to that of $KO$.  This lets us use another universal coefficient theorem to lift our description of $KO^* KO$ as $KO^*$--valued measures to $\widehat L_1 \tmf^* KO$ as $\widehat L_1 \tmf^*$--valued measures.
     \item The homotopy type of $\widehat L_2 \tmf$ is ``naively irrelevant'' in the chromatic fracture square: maps $b\Spin \to \widehat L_2 \tmf$ factor through $\widehat L_2 b\Spin = \widehat L_2 KO_p = 0$.
     \item However, the logarithm's presence in the chromatic fracture square $\widehat L_1 \tmf \to \widehat L_1 \widehat L_2 \tmf$ has a real effect that must be understood.  This is not easy: the height $2$ logarithm is not so accessible, so this requires a real understanding of power operations in $\tmf$.
-    \item You also have to calculate the Miller invariant associated to $\tmf$.  In the case of $E_\infty(M\Spin, KO)$, one uses the $A_\infty$ orientation $MU \to KU$, as well as an understanding of the maps $\pi_* BU \to \pi_* BO$ and $\pi_* KO \to \pi_* KU$.  The case of $E_\infty(M\String, \tmf)$ is similar: one constructs an $A_\infty$ lift of the $\sigma$--orientation $MU[6, \infty) \to K^{\Tate}$, as well as an understanding of the maps $\pi_* BU[6, \infty) \to \pi_* B\String$ and $\pi_* \tmf \to \pi_* K^{\Tate}$.
-    \todo{I think the conclusion here is that you have to be a $q$--expansion of a modular form (of a particular weight) with constant term a Bernoulli number and every other coefficient integral.  Mike told me that this (or something like this) fully determines these generalized Eisenstein series; that's nice.}
-    \todo{Mike said that there's some kind of Bousfield--Kuhn argument you can make to use the $H_\infty$ orientation to detect the generalized Eisenstein congruences.  I can't figure out what it would be.}
+    \item You also have to calculate the Miller invariant associated to $\tmf$.  In the case of $E_\infty(M\Spin, KO)$, one uses the $A_\infty$ orientation $MU \to KU$, as well as a rational understanding of the maps $\pi_* BU \to \pi_* BO$ and $\pi_* KO \to \pi_* KU$, and one must replace each of these ingredients with $\tmf$ analogues.  The main point is that there are very few modular forms whose constant term is a given Bernoulli number.  There is an alternative approach, along the lines of Miller's original calculation~\cite{MillerBernoulliNos}, that takes as input a calculation of a certain $S^1$--transfer.\footnote{There is, supposedly, a further alternative approach that uses an $H_\infty$--orientation and tricks with the Bousfield--Kuhn functor to determine the Miller invariant, but I am unable to reconstruct this argument.}
     \item Finally, you have to ramp up the algebraic part of the calculation by identifying the analogues of the Mazur moments in $\pi_* \widehat L_1 \tmf$.  These turn out to be normalized Eisenstein series.
 \end{enumerate}
 
@@ -1134,17 +1131,6 @@ The presence of such interesting arithmetic invariants (Bernoulli numbers, Berno
 Some more open questions about this can be found in 
 \todo[inline]{Mike has some open questions about the end of this analysis (and in particular about the fiber of the Atkin map that appears in the $K(1)$--local analysis of $\tmf$, an analogue of the chromatic splitting fiber) at the end of his talk notes \textit{The $\String$ orientation of $\tmf$}.  Some of that should be copied here.}
 \end{remark}
-
-\todo{$KU$ is known to have a unique $E_\infty$ structure by work of Baker--Richter.  Is this also true of $K^{\Tate}$?  If so, it lends a lot of credibility to this Miller invariant calculation and its relation to $\tmf$.}
-\todo{I think it's possible to show, as a side-example, that the total exterior power operation $\lambda^q\co K \to K\ps{q}$ is an $E_\infty$ map where $K\ps{q}$ is $K^{\Tate}$ and \emph{not}, e.g., $K^{\CP^\infty}$.}
-
-
-
-
-
-
-
-
 
 
 
