--- a/sigma.tex
+++ b/sigma.tex
@@ -1210,7 +1210,7 @@ A \index{elliptic curve!Weierstrass curve}\textit{Weierstrass curve} is \emph{an
 The singularities of a degenerate Weierstrass equation always occur outside of a formal neighborhood of the marked identity point, which in fact still carries the structure of a formal group.  The formal group associated to the twisted cubic is the formal multiplicative group (indeed, the smooth locus of the twisted cubic \emph{is the multiplicative group}), and the isomorphism making the identification extends a family of such isomorphisms $\phi$ over the nonsingular part of the Tate curve.
 \end{remark}
 
-\begin{definition}[{\cite[Section 5]{MoravaFormsOfKthy}, \cite[Section 2.7]{AHSTheoremOfTheCube}}]
+\begin{definition}[{\cite[Section 5]{MoravaFormsOfKthy}, \cite[Section 2.7]{AHSTheoremOfTheCube}}]\label{TateKTheoryDefn}
 The generalized elliptic spectrum $K_{\Tate}$, called \index{Tate K theory@Tate $K$--theory}\textit{Tate $K$--theory}, has as its underlying spectrum $KU\ps{q}$.  The associated generalized elliptic curve is $C_{\Tate}$, and the isomorphism $\CP^\infty_{KU\ps{q}} \cong (C_{\Tate})^\wedge_0$ is $\phi$ from \Cref{TwistedCubicGivesGm}.
 \end{definition}
 
