--- a/unknowns.tex
+++ b/unknowns.tex
@@ -2,11 +2,13 @@
 
 \chapter{Loose ends}
 
-\todo[inline]{I'd like to spend a couple of days talking about ways the picture in this class can be extended, finally, some actually unanswered questions that naturally arise.  The following two section titles are totally made up and probably won't last.}
-\todo[inline]{Also, write a broad-scale introduction to this appendix.}
+\todo[inline]{Write a broad-scale introduction to this appendix.}
 
 
 
+
+
+I'd like to spend a couple of days talking about ways the picture in this class can be extended, finally, some actually unanswered questions that naturally arise.  The following two section titles are totally made up and probably won't last.
 
 
 
@@ -42,7 +44,8 @@ The Stolz--Teichner program
 -----
 
 Bousfield's work on the $K$--theory of infinite loopspaces \cite{BousfieldLambdaRings} and Morava $K$--theoretic analogues of the results of \Cref{LEFTCooperations}
-\todo{Ask Mike (and Jacob?) if there are analogues of these results for $kO$ which explain Mahowald's generalized $K$--theoretic Brown--Gitler spectra.  3/29: I did ask Mike, he said he didn't know. I also asked Paul, and he said this seemed unreasonable, since $kO$ isn't valued in co/commutative Hopf algebras.  This is a fair point: one would need to invent an ``analogue'' of Dieudonn\'e theory for $kO$, in the sense that some category it takes values in would have to be identified as abelian, where the category is rigid enough that it often sends fiber sequences to exact sequences in the category.}
+
+Ask Mike (and Jacob?) if there are analogues of these results for $kO$ which explain Mahowald's generalized $K$--theoretic Brown--Gitler spectra.  3/29: I did ask Mike, he said he didn't know. I also asked Paul, and he said this seemed unreasonable, since $kO$ isn't valued in co/commutative Hopf algebras.  This is a fair point: one would need to invent an ``analogue'' of Dieudonn\'e theory for $kO$, in the sense that some category it takes values in would have to be identified as abelian, where the category is rigid enough that it often sends fiber sequences to exact sequences in the category.
 
 Constructing sheaves of spectra on $\moduli{fg}$: the no-go results for $E_\infty$ and $A_\infty$ rings on the flat site.  There's a little MO discussion about it here: \texttt{http://chat.stackexchange.com/transcript/message/35361282\#35361282}.
 
@@ -60,7 +63,9 @@ Does $E_n$ receive an $E_\infty$ orientation?  Does $BP$?  (Johnson--Noel says $
 
 $p$--divisible groups and transchromatic phenomena
 
-Remark 12.13 of published $H_\infty$ AHS says their obstruction framework agrees with the $E_\infty$ obstruction framework (if you take everything in sight to have $E_\infty$ structures).  This is almost certainly related to the discussion at the end of Matt's thesis about the $MU$--orientation of $E_d$.\todo{Section 12.4 compares doing $H_\infty$ descent with doing $E_\infty$ descent and shows that they're the same (in the case of interest?).}
+Remark 12.13 of published $H_\infty$ AHS says their obstruction framework agrees with the $E_\infty$ obstruction framework (if you take everything in sight to have $E_\infty$ structures).  This is almost certainly related to the discussion at the end of Matt's thesis about the $MU$--orientation of $E_d$.
+
+Section 12.4 compares doing $H_\infty$ descent with doing $E_\infty$ descent and shows that they're the same (in the case of interest?).
 
 Hovey's paper on $v_n$--periodic elements in ring spectra.  He has a nice (and thorough!) exposition on why one should be interested in bordism spectra and their splittings: for instance, a careful analysis of $M\Spin$ will inexorably lead one toward studying $KO$.  It would be nice if studying $M\String$ (and potentially higher analogues) would lead one toward non-completed, non-connective versions of $EO_n$.  Talk about $BoP$, for instance.
 
@@ -101,7 +106,8 @@ It is completely unclear why $MU$ plays such an important mediating role between
 \item Are there complementary localizers $L_\alpha\co \CatOf{Modules}_R \to \CatOf{Modules}_{R,(\alpha)}$?  Can they be presented via Bousfield's framework as homological localizations for auxiliary $S$--algebra spectra $S_\alpha$?  Do the contexts $\context{S_\alpha}$ admit compatible localizers with $\context{S}$?
 \end{enumerate}
 For $R = \S$, this is the role that the $R$--algebra $S = MU$ and the $S$--algebras $S_d = E(d)$ play.  Finding these spectra feels like striking gold, and it is unclear how to produce analogous spectra in general.
-\todo{Mathews's work on Galois descent shows that the fixed point map $\CatOf{Modules}_{E_\Gamma, \Aut \Gamma}^{\mathrm{complete}} \to \CatOf{Spectra}_{\Gamma}$ is an equivalence of categories.}
+
+Mathews's work on Galois descent shows that the fixed point map $\CatOf{Modules}_{E_\Gamma, \Aut \Gamma}^{\mathrm{complete}} \to \CatOf{Spectra}_{\Gamma}$ is an equivalence of categories.
 \end{remark}
 \noindent One can ask the same question from the geometric direction: why bordism?  Why should these spectra have these nice flatness properties?  Why should they have recognizable computational properties?  Why bordism?
 
@@ -191,7 +197,7 @@ Comparison of comodules $M$ for the isogenies pile with the action of $M_n(\Z_p)
 
 
 
-\todo[inline]{Leave a remark in here about this: McClure in BMMS works along similar lines to show that the Quillen idempotent is not $H_\infty$, but he doesn't get any positive results (and, in particular, he can't complete his analysis as we do because he doesn't have access to the $BP$--homology of finite groups and to HKR character theory).  One wonders whether the stuff here does say something about $BP$ as the height tends toward $\infty$.  So far as I know, no one has written much about this.  Surely it remains a bee in Matt's bonnet.}
+Leave a remark in here about this: McClure in BMMS works along similar lines to show that the Quillen idempotent is not $H_\infty$, but he doesn't get any positive results (and, in particular, he can't complete his analysis as we do because he doesn't have access to the $BP$--homology of finite groups and to HKR character theory).  One wonders whether the stuff here does say something about $BP$ as the height tends toward $\infty$.  So far as I know, no one has written much about this.  Surely it remains a bee in Matt's bonnet.
 
 
 
@@ -203,7 +209,7 @@ Sections 5.3-4 of Hopkins's ICM address \textit{Algebraic Topology and Modular F
 
 
 
-\todo[inline]{Jacob wrote me an email giving a very slightly fuller sketch of what the DAG perspective on the $\sigma$--orientation is.  Interestingly, it boils down to a fact from projective geometry: there just aren't that many line bundles on projective varieties.  This forces a couple of things to become equal, and in a suitable setting they even become canonically equal.  The email has no subject line, which will make it hard to find, but you should include a summary of it (which is dependent on whatever's written in the \textit{Survey} paper) all the same.}
+Jacob wrote me an email giving a very slightly fuller sketch of what the DAG perspective on the $\sigma$--orientation is.  Interestingly, it boils down to a fact from projective geometry: there just aren't that many line bundles on projective varieties.  This forces a couple of things to become equal, and in a suitable setting they even become canonically equal.  The email has no subject line, which will make it hard to find, but you should include a summary of it (which is dependent on whatever's written in the \textit{Survey} paper) all the same.
 
 
 
