--- a/powerops.tex
+++ b/powerops.tex
@@ -16,7 +16,7 @@ The following are examples of $E_\infty$ ring spectra:
     \item (\cite[Section VIII.1]{MayRingSpacesSpectra}) The Eilenberg--Mac Lane spectra $HR$.
     \item (\cite[Corollary 7.6--7]{GoerssHopkins}) The Morava $E$--theories $E_\Gamma$ and their fixed point spectra.\footnote{Notably, the Morava $K$--theories are \emph{not} $E_\infty$ rings at finite heights, in view of \Cref{HinftyRingsModp}.}
     \item (\cite[Section IV.3]{MayRingSpacesSpectra}) The Thom spectra arising from the $J$--homomorphism, including $MO$, $MSO$, $M\Spin$, $M\String$, $MU$, $MSU$, and $MU[6, \infty)$.
-    \item (\citeme{Behrens}, cf.\ \Cref{ConstructionOfTMFSection}) The spectra $\TMF$, $\Tmf$, and $\tmf$. \qed
+    \item (\cite{BehrensConstruction}, cf.\ \Cref{ConstructionOfTMFSection}) The spectra $\TMF$, $\Tmf$, and $\tmf$. \qed
 \end{itemize}
 \end{theorem}
 
@@ -496,7 +496,7 @@ In the next Lecture, we will show that Tate $K$--theory (cf.\ \Cref{TateKTheoryD
 
 The introduction of the geometry of $E_\infty$ ring spectra has borne out a second version of the $\sigma$--orientation, summarized as a map of $E_\infty$ ring spectra \[\sigma\co M\String \to \tmf.\]  This map has \emph{extremely} good properties, not only owing to it being a map of structured ring spectra but to the object $\tmf$ itself, not heretofore discussed.  This is one variant of the spectrum of \index{topological modular forms}\textit{topological modular forms}, which comes about from the following daydream: according to \Cref{EllipticSpectraAreOriented} and \Cref{EllipticSpectraAreOrientedByString}, every elliptic spectrum is naturally oriented, and the system of orientations should give rise to a $\String$--orientation of the homotopy limit over all elliptic spectra, itself a kind of ``universal'' elliptic spectrum.  There are several delicate points to this: the limit of a diagram of rings need not be a complex-orientable ring spectrum (cf.\ the $C_2$--equivariant spectrum $KU$); this diagram is very large; and the diagram exists only in the homotopy category and contains loops, so ``homotopy limit'' is not automatically defined without finding a lift to a more structured context.
 
-The goal of this Lecture is to sketch out both the ingredients and the recipe for constructing this object.  We aren't going to prove the main theorem in full detail, as the details are so thick that they do not admit a more reasonable presentation than what Beherns has already given~\citeme{Behrens}.  The idea is to make use of the obstruction theory that $E_\infty$ rings garner us, and to ``work locally'' on a particular class of examples where the obstruction theory is well-behaved, using these to carefully exhaust the problem.  We begin with a precise definition of what ``locally'' means in this setting:
+The goal of this Lecture is to sketch out both the ingredients and the recipe for constructing this object.  We aren't going to prove the main theorem in full detail, as the details are so thick that they do not admit a more reasonable presentation than what Beherns has already given~\cite{BehrensConstruction}.  The idea is to make use of the obstruction theory that $E_\infty$ rings garner us, and to ``work locally'' on a particular class of examples where the obstruction theory is well-behaved, using these to carefully exhaust the problem.  We begin with a precise definition of what ``locally'' means in this setting:
 
 \begin{definition}[{\cite[Definition 6.2.2.6, Section 6.5]{LurieHTT}}]
 A \index{sheaf!infty sheaf@$\infty$--sheaf}\textit{$\CatOf{D}$--valued sheaf} on a site $\CatOf{C}$ is a functor $F\co \CatOf C \to \CatOf D$ that converts \v{C}ech diagrams to homotopy limit diagrams.
@@ -508,8 +508,7 @@ Let $f\co \stack N \to \moduli{fg}$ be a flat, representable morphism of stacks.
 
 Our goal, then, is to outline the proof of the following theorem:
 
-\begin{theorem}[{Goerss--Hopkins--Miller~\cite{GoerssHopkins}; Behrens; Lurie~\cite{LurieSurveyOfEll}}]\label{UniqueTopEnrichmentOfMell}
-\citeme{Behrens from the tmf volume; Hopkins--Miller from the tmf volume}
+\begin{theorem}[{Goerss--Hopkins--Miller~\cite{HopkinsMiller,GoerssHopkins}; Behrens~\cite[Theorem 1.1]{BehrensConstruction}; Lurie~\cite{LurieSurveyOfEll}}]\label{UniqueTopEnrichmentOfMell}
 The moduli of topological enrichments of $\moduli{ell}$, the moduli of elliptic curves, is contractible.
 \end{theorem}
 
@@ -641,7 +640,7 @@ C[p]\arrow{r} & C \arrow["p"]{r} & C^{(p)}
 \]
 Unfortunately, this $\theta$--algebra is not nice enough to apply the Goerss--Hopkins--Miller theorem.  In order to fix this, it becomes convenient to work at $p \ge 5$ for simplicity, and we then pass to a slightly more rigid moduli: we introduce a formal $(\Z/p)$--level structure, i.e., an isomorphism $\Z/p \cong (\widehat C)[p]$.  This \'etale $(\Z/p)^\times$--cover of $\moduli{ell}^{\ord}$ has the following exceptional property:
 
-\begin{lemma}[{\cite[Theorem 2.9.4]{Hida}}]\citeme{Lemma 5.2 of Behrens}
+\begin{lemma}[{\cite[Theorem 2.9.4]{Hida}, \cite[Lemma 5.2]{BehrensConstruction}}]
 For $p \ge 5$, the moduli $\moduli{ell}^{\ord}(p)$ is \emph{affine}. \qed
 \end{lemma}
 
@@ -704,7 +703,7 @@ At the prime $3$, the proof of Igusa's theorem needs amplification, but the stat
 At the prime $2$, two further things go wrong: one must pass to the Igusa cover $\moduli{ell}^{\ord}(4)$ before it becomes affine, but then the Galois group of this cover is $C_2$, which has infinite cohomological dimension at $2$.  Appealing to the equivalence $KO = KU^{hC_2}$, one works with $2$--adic \emph{real} $K$--theory instead, which somehow pre-computes the Galois action.
 \end{remark}
 
-\begin{remark}[{\cite{LauresK1LocalTmf}}]\citeme{Also Hopkins's article in the TMF volume}
+\begin{remark}[{\cite{HopkinsK1LocalEinftyRings}, \cite{LauresK1LocalTmf}}]
 There is another way to construct $\TMF^{\ord}$ at low primes, given by a complex consisting of two $E_\infty$ cells attached to $\S$.  The way this is done, essentially, is by constructing a complex whose $p$--adic $K$--theory matches the expected value: first it must have the right dimension, and then the action of $\theta$ must be corrected.
 \end{remark}
 
