--- a/mo.tex
+++ b/mo.tex
@@ -344,6 +344,7 @@ Our route to finding this internally occurring $\alpha^*$ is by turning to the n
 will be difficult to squeeze into any kind of algebro-geometric framework.  Milnor was the first person to see a way around this, with two crucial observations.  First, the Steenrod algebra is a Hopf algebra\footnote{The construction of both the Hopf algebra diagonal here and the coaction map below is somewhat ad hoc.  We will give a more robust presentation in \Cref{StableContextLecture}.}, using the map \[[\HFtwo, \HFtwo]_* \xrightarrow{\mu^*} [\HFtwo \sm \HFtwo, \HFtwo]_* \cong [\HFtwo, \HFtwo]_* \otimes [\HFtwo, \HFtwo]_*\] as the diagonal.  This Hopf algebra structure is actually cocommutative---this is a rephrasing of the symmetry of the Cartan formula: \[\Sq^n(x y) = \sum_{i+j=n} \Sq^i(x) \Sq^j(y).\]  It follows that the linear-algebraic dual of the Steenrod algebra $\mathcal A_*$ is a commutative ring, and hence $\Spec \mathcal A_*$ would make a reasonable algebro-geometric object.
 
 Second, we want to identify the role of $\mathcal A_*$ in acting on $\HFtwo^* X$.  By assuming that $X$ is a finite complex, we can write it as the Spanier--Whitehead dual $X = DY$ of some other finite complex $Y$.  Starting with the action map on $\HFtwo^* Y$:
+\todo{Make sure these intertexts have the correct margins.}
 \begin{align*}
 \mathcal A^* \otimes \HFtwo^* Y & \to \HFtwo^* Y \\
 \intertext{we take the $\F_2$--linear dual to get a coaction map}
