put text around 1.4.16 to show that it isn’t part of the main thread

--- a/mo.tex
+++ b/mo.tex
@@ -592,7 +592,16 @@ Let $M$ and $N$ be $A$--comodules with $M$ projective as a $k$--module.  Then th
 \]
 \end{lemma}
 
-\noindent From this, we can deduce a connection between the push--pull flavor of comodule cohomology described above and the input to the Adams spectral sequence.
+This has two pleasant consequences.  The first is that we can deduce a connection between the push--pull flavor of comodule cohomology described above and the input to the Adams spectral sequence:
+
+\begin{corollary}\label{ExtAndCotorAgree}
+There is an isomorphism \[\CatOf{Comodules}_A(k, N) = \CatOf{Modules}_k(k, k) \cotensor_A N = k \cotensor_A N\] and hence \[\Ext_A(k, N) \cong \Cotor_A(k, N) \left(= H^* R\pi_* N\right).\]
+\end{corollary}
+\begin{proof}
+Resolve $N$ using the cofree modules described above, then apply either functor $\CatOf{Comodules}_A(k, -)$ or $k \cotensor_A -$.  In both cases, you get the same complex.
+\end{proof}
+
+\noindent The second is that cofree comodules have particularly simple cotorsion:
 
 \begin{corollary}\label{CotensorReducesCofreeness}
 Let $N = N' \otimes_k A$ be a cofree comodule. Then $N \cotensor_A k = N'$.
@@ -604,13 +613,6 @@ Picking $M = k$, we have
 & = \CatOf{Modules}_k(k, k) \cotensor_A N \\
 & = k \cotensor_A N. \qedhere
 \end{align*}
-\end{proof}
-
-\begin{corollary}\label{ExtAndCotorAgree}
-There is an isomorphism \[\CatOf{Comodules}_A(k, N) = \CatOf{Modules}_k(k, k) \cotensor_A N = k \cotensor_A N\] and hence \[\Ext_A(k, N) \cong \Cotor_A(k, N) \left(= H^* R\pi_* N\right).\]
-\end{corollary}
-\begin{proof}
-Resolve $N$ using the cofree modules described above, then apply either functor $\CatOf{Comodules}_A(k, -)$ or $k \cotensor_A -$.  In both cases, you get the same complex.
 \end{proof}
 
 \begin{example}\label{HF2HomologyIsValuedInAutGaEquivarModules}
