resize the spectral sequences to fit

--- a/anss3.tex
+++ b/anss3.tex
@@ -6,7 +6,8 @@
     y range={0}{10},
     x range={0}{45},
     x tick step=5,
-    xscale=0.375,
+    xscale=0.34,
+    yscale=0.75,
     class labels={above left=0.2em},
 ]
 \class[rectangle,fill,inner sep=3pt](0,0)
