--- a/anss2.tex
+++ b/anss2.tex
@@ -8,7 +8,8 @@
     math nodes,    
     y range={0}{10},
     x range={0}{17},
-    xscale=1.0,
+    xscale=0.9,
+    yscale=0.7,
     above left label distance={0em},
     label distance={0.2em},
 ]
