add copyright line

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{cambridge7A}
+\documentclass[final]{cambridge7A}
 
 \input{preamble}
 
@@ -6,7 +6,7 @@
 \title[Lecture Notes]{Formal Geometry and Bordism Operations}
 \author{Eric Peterson}
 % \date{{\footnotesize Compiled: \today \\ Git hash: {\gitAbbrevHash}{\gitDirty}}}
-
+\copyrightline{Copyright {\textcopyright} 2015--2017 Eric Peterson}
 
 
 
@@ -91,6 +91,8 @@
 
 
 \backmatter
+
+\renewcommand\chaptername{\relax}
 
 \bibliographystyle{alpha}
 \bibliography{main}
