--- a/preface.tex
+++ b/preface.tex
@@ -2,13 +2,19 @@
 
 % \input{class-info}
 
-\newpage
+\cleardoublepage
 
 \vspace*{\fill}
 
-\epigraph{``Let us be glad we don't work in algebraic geometry.''}{J.\ F.\ Adams~\cite[Section 2.1]{AdamsInfiniteLoopSpaces}}
+\begin{center}
+``Let us be glad we don't work in algebraic geometry.''
 
-\newpage
+\hspace{6.3em} ------J.\ F.\ Adams~\cite[Section 2.1]{AdamsInfiniteLoopSpaces}
+\end{center}
+
+\vspace*{\fill}
+
+\cleardoublepage
 
 \subsection*{Acknowledgements}
 
