fix the two special glyphs in the new font

--- a/preamble.tex
+++ b/preamble.tex
@@ -152,7 +152,7 @@
 \newcommand{\Gm}{\mathbb G_m}
 \newcommand{\Ga}{\mathbb G_a}
 \newcommand{\ThomDivisor}{\mathbb D}
-\renewcommand{\AA}{A\!\!\!A} % the right join of the leg and bar on the left letter should meet the left join of the leg and bar of the right letter
+\renewcommand{\AA}{A\!\!A} % the right join of the leg and bar on the left letter should meet the left join of the leg and bar of the right letter
 
 \newcommand{\<}{\langle}
 \renewcommand{\>}{\rangle}
@@ -181,7 +181,7 @@
 \newcommand{\bigast}{\mathop{\scalebox{2.5}{\raisebox{-0.35ex}{$\ast$}}}}
 
 % cf http://tex.stackexchange.com/questions/286050/rotated-math-with-correct-font-size for sizing instructions
-\newcommand{\circulatearrows}{\text{$\curvearrowleft$\hspace{-0.95em}\rotatebox[origin=bl]{180}{$\curvearrowleft$}}}
+\newcommand{\circulatearrows}{\text{$\curvearrowleft$\hspace{-0.90em}\rotatebox[origin=bl]{180}{$\curvearrowleft$}}}
 
 \newcommand{\context}[1]{\mathcal{M}_{#1}}
 \newcommand{\Ucontext}[1]{\mathcal{UM}_{#1}}
