incorporate index fixes from the first two chapters

--- a/main.bib
+++ b/main.bib
@@ -90,6 +90,17 @@ MRREVIEWER = {V. P. Snaith},
        URL = {http://dx.doi.org/10.1017/S0305004100053111},
 }
 
+@article{Adem,
+  title={The iteration of the Steenrod squares in algebraic topology},
+  author={Adem, Jos{\'e}},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={38},
+  number={8},
+  pages={720--726},
+  year={1952},
+  publisher={National Acad Sciences}
+}
+
 @article {Amitsur,
     AUTHOR = {Amitsur, S. A.},
      TITLE = {Simple algebras and cohomology groups of arbitrary fields},
