--- a/sumfgl.tex
+++ b/sumfgl.tex
@@ -1,3 +1,5 @@
+% taken from https://tex.stackexchange.com/a/164490/2671
+
 \makeatletter
 \newcommand{\sumfgl}[1]{\mathop{\vphantom{\sum}\mathpalette\sum@fgl{#1}}}
 \newcommand{\sum@fgl}[2]{%
