save the original Adams-Atiyah reference for later

--- a/main.bib
+++ b/main.bib
@@ -72,6 +72,17 @@ MRREVIEWER = {Stewart B. Priddy},
   publisher={Elsevier}
 }
 
+@article{AdamsAtiyah,
+  title={K-theory and the Hopf invariant},
+  author={Adams, John Frank and Atiyah, Michael F},
+  journal={The Quarterly Journal of Mathematics},
+  volume={17},
+  number={1},
+  pages={31--38},
+  year={1966},
+  publisher={Oxford University Press}
+}
+
 @article {AdamsPriddy,
     AUTHOR = {Adams, J. F. and Priddy, S. B.},
      TITLE = {Uniqueness of {$B{\rm SO}$}},
