reminder to fix bad index entries later

--- a/main.tex
+++ b/main.tex
@@ -57,6 +57,7 @@
 \todo[inline]{Use $\EinftyRings$ everywhere appropriate.}
 \todo[inline]{Use ${}^*$ and not ${}^\vee$ everywhere for linear dual.}
 \todo[inline]{Make sure adjoint pairs are written with the left-adjoint on the left and with its arrow on top.}
+\todo[inline]{Unify index entries.}
 
 
 
